--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <title>LANDING PAGE</title>
 </head>
 <body>
-    
+    <div class="scene"></div>
+    <script src="js/three.min.js"></script>
+    <script src="js/GLTFLoader.js"></script>
     <script src="js/app.js"></script>
 </body>
 </html>
