--- a/index.html
+++ b/index.html
@@ -1,38 +1,44 @@
 <!DOCTYPE html>
 <html lang="de">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="css/style.css" />
+    <link rel="stylesheet" href="css/responsive.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
+    />
     <title>LANDING PAGE</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <a href="#" class="logo">logo</a>
-        <div class="header-right">
-            <div class="btn dayNight">
-             <i class="far fa-moon"></i>
-             <i class="far fa-sun"></i>
-            </div>
-            <div class="btn menuToggle">
-             <i class="fas fa-bars"></i>
-             <i class="fas fa-times"></i>
-            </div>
+      <a href="#" class="logo"
+        ><img class="logo-img" src="img/Tesla_Motors_Logo.svg" alt=""
+      /></a>
+      <div class="header-right">
+        <div class="btn dayNight">
+          <i class="far fa-moon"></i>
+          <i class="far fa-sun"></i>
         </div>
-    </header> 
+        <div class="btn menuToggle">
+          <i class="fas fa-bars"></i>
+          <i class="fas fa-times"></i>
+        </div>
+      </div>
+    </header>
     <div class="scene"></div>
     <ul class="navigation">
-        <li><a href="#">Home</a></li>
-        <li><a href="#">Über uns</a></li>
-        <li><a href="#">Portfolio</a></li>
-        <li><a href="#">News</a></li>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Über uns</a></li>
+      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">News</a></li>
     </ul>
     <script src="js/menu.js"></script>
     <script src="js/darkmode.js"></script>
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/app.js"></script>
-</body>
+  </body>
 </html>
