--- a/index.html
+++ b/index.html
@@ -28,7 +28,11 @@
         </div>
       </div>
     </header>
-    <div class="scene"></div>
+    <div class="content-wrapper">
+      <div class="content">
+        <div class="scene"></div>
+      </div>
+    </div>
     <ul class="navigation">
       <li><a href="#">Home</a></li>
       <li><a href="#">Über uns</a></li>
