remove id from logo

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body>
     <header>
       <a href="#" class="logo"
-        ><img id="logo" class="logo-img" src="img/Tesla_Motors_Logo.svg" alt=""
+        ><img class="logo-img" src="img/Tesla_Motors_Logo.svg" alt=""
       /></a>
       <div class="header-right">
         <div class="btn dayNight">
