add text to content box

--- a/index.html
+++ b/index.html
@@ -31,6 +31,9 @@
     <div class="content-wrapper">
       <div class="content">
         <div class="scene"></div>
+        <div class="content-text">
+            <h1>taste the future!</h1>
+        </div>
       </div>
     </div>
     <ul class="navigation">
