add div construct

--- a/index.html
+++ b/index.html
@@ -30,11 +30,8 @@
     </header>
     <div class="content-wrapper">
       <div class="content">
+        <div class="content-text"></div>
         <div class="scene"></div>
-        <div class="content-text">
-            <h1>taste the future!</h1>
-        </div>
-      </div>
     </div>
     <ul class="navigation">
       <li><a href="#">Home</a></li>
