--- a/index.html
+++ b/index.html
@@ -30,6 +30,8 @@
     </header>
     <div class="content-wrapper">
       <div class="content">
+        <img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
+        <img class="small-circle" src="./img/small-eclipse.svg" alt="" />
         <div class="content-text">
           <h1>taste the future!</h1>
           <p>Inspired by Tesla Tequila, the Tesla Decanter is the perfect way to add your favorite liquor to this unfilled vessel and will make for a lovely addition to your home bar. With a lightning bolt silhouette, each hand-blown bottle holds up to 750 mL of your favorite spirit. Featuring both a Tesla wordmark and T logo in gold and cradled atop a polished metal stand for prominent display, this exclusive collectible is ideal for any occasion.</p>
@@ -37,7 +39,10 @@
           <p id="product-headline">Tesla Decanter</p>
           <p id="price">150,00 €</p>
         </div>
-        <div class="scene"></div>
+        <div class="scene">
+        </div>
+        </div>
+      </div>
     </div>
     <ul class="navigation">
       <li><a href="#">Home</a></li>
