--- a/index.html
+++ b/index.html
@@ -38,7 +38,20 @@
           <br>
           <p id="product-headline">Tesla Decanter</p>
           <p id="price">150,00 €</p>
+          <br>
+          <br>
+          <div class="info">
+          <div class="progress-area">
+          <h2 id="sold">already sold</p>
+          <div class="progress-bar">
+          <div id="myProgress">
+            <div id="myBar"></div>
+          </div>
         </div>
+      </div>
+      <button>test</button>
+    </div>
+  </div>
         <div class="scene">
         </div>
         </div>
@@ -55,5 +68,6 @@
     <script src="js/three.min.js"></script>
     <script src="js/GLTFLoader.js"></script>
     <script src="js/app.js"></script>
+    <script src="js/progress.js"></script>
   </body>
 </html>
