--- a/index.html
+++ b/index.html
@@ -49,7 +49,16 @@
           </div>
         </div>
       </div>
-      <button>test</button>
+      <button class="add-to-cart">
+        <div class="default">I WANT YOU</div>
+        <div class="success">Got it</div>
+        <div class="cart">
+          <div>
+              <div></div>
+              <div></div>
+          </div>
+      </div>
+    </button>
     </div>
   </div>
         <div class="scene">
@@ -69,5 +78,6 @@
     <script src="js/GLTFLoader.js"></script>
     <script src="js/app.js"></script>
     <script src="js/progress.js"></script>
+    <script src="js/addtocart.js"></script>
   </body>
 </html>
