--- a/index.html
+++ b/index.html
@@ -36,9 +36,8 @@
           <h1>taste the future!</h1>
           <p>Inspired by Tesla Tequila, the Tesla Decanter is the perfect way to add your favorite liquor to this unfilled vessel and will make for a lovely addition to your home bar. With a lightning bolt silhouette, each hand-blown bottle holds up to 750 mL of your favorite spirit. Featuring both a Tesla wordmark and T logo in gold and cradled atop a polished metal stand for prominent display, this exclusive collectible is ideal for any occasion.</p>
           <br>
-          <p id="product-headline">Tesla Decanter</p>
+          <p id="product-headline">Tesla Decanter</p> <p id="limited">Limited Edition</p>
           <p id="price">150,00 €</p>
-          <br>
           <br>
           <div class="info">
           <div class="progress-area">
