add social icons

--- a/index.html
+++ b/index.html
@@ -63,6 +63,10 @@
         <div class="scene">
         </div>
         </div>
+        <div class="social-wrapper">
+          <a href="#" class="fab fa-facebook-f"></a>
+          <a href="#" class="fab fa-twitter"></a>
+        </div>
       </div>
     </div>
     <ul class="navigation">
