--- a/index.html
+++ b/index.html
@@ -67,6 +67,9 @@
           <a href="#" class="fab fa-facebook-f"></a>
           <a href="#" class="fab fa-twitter"></a>
         </div>
+        <div class="created">
+          <p>&#169; Christian Gitter</p>
+        </div>
       </div>
     </div>
     <ul class="navigation">
