--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
         </div>
       </div>
       <button class="add-to-cart">
-        <div class="default">I WANT YOU</div>
-        <div class="success">Got it</div>
+        <div class="default"><i class="fas fa-shopping-basket"></i></div>
+        <div class="success"><i class="far fa-check-circle"></i></div>
         <div class="cart">
           <div>
               <div></div>
