add special XR size

--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
         </div>
         <div class="created">
           <p>&#169; Christian Gitter</p>
+          <p id="model">iPhone XR</p>
         </div>
       </div>
     </div>
