--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
     <ul class="navigation">
       <li><a href="#">Home</a></li>
       <li><a href="#">Über uns</a></li>
-      <li><a href="#">Portfolio</a></li>
+      <li><a href="#">Angebote</a></li>
       <li><a href="#">News</a></li>
     </ul>
     <!--START MODAL-->
